# 42sh

./: 42sh  42sh 2  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  LICENSE  Makefile  README  README.md  TODO  ast.dot  ast_print  ast_print 2  build.sh  cd  clean.sh  cmake_install.cmake  commands.sh  documentation.sh  exec  history  moulinette.py  run_test  run_test_ast  run_test_lexer  run_test_parser  run_tests.sh  test  test.sh  test_suite.py  tests_arithmetic_lexer  tests_history  tests_lexer  tests_parser  tests_storage  token_printer  tree.dot
SAVE/: exec.c
Testing/Temporary/: CTestCostData.txt
cmake/Modules/: FindCriterion.cmake
doc/: pdf_converter.sh
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  annotated.html  arithmetic__ast_8c.html  arithmetic__ast_8c__incl.dot  arithmetic__ast_8c__incl.md5  arithmetic__ast_8h.html  arithmetic__ast_8h__dep__incl.dot  arithmetic__ast_8h__dep__incl.md5  arithmetic__ast_8h_source.html  arithmetic__execution_8c.html  arithmetic__execution_8c__incl.dot  arithmetic__execution_8c__incl.md5  arithmetic__execution_8h.html  arithmetic__execution_8h__dep__incl.dot  arithmetic__execution_8h__dep__incl.md5  arithmetic__execution_8h__incl.dot  arithmetic__execution_8h__incl.md5  arithmetic__execution_8h_source.html  arithmetic__expansion_8c.html  arithmetic__expansion_8c__incl.dot  arithmetic__expansion_8c__incl.md5  arithmetic__lexer_8c.html  arithmetic__lexer_8c__incl.dot  arithmetic__lexer_8c__incl.md5  arithmetic__lexer_8h.html  arithmetic__lexer_8h__dep__incl.dot  arithmetic__lexer_8h__dep__incl.md5  arithmetic__lexer_8h__incl.dot  arithmetic__lexer_8h__incl.md5  arithmetic__lexer_8h_source.html  arithmetic__parser_8c.html  arithmetic__parser_8c__incl.dot  arithmetic__parser_8c__incl.md5  arithmetic__parser_8h.html  arithmetic__parser_8h__dep__incl.dot  arithmetic__parser_8h__dep__incl.md5  arithmetic__parser_8h__incl.dot  arithmetic__parser_8h__incl.md5  arithmetic__parser_8h_source.html  (+742 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+97 more)
doc/man/man3/: CMakeCCompilerId.c.3  CMakeCXXCompilerId.cpp.3  _home_enzar_delivery_EPITA_42sh_CMakeFiles_.3  _home_enzar_delivery_EPITA_42sh_CMakeFiles_3.17.1_.3  _home_enzar_delivery_EPITA_42sh_CMakeFiles_3.17.1_CompilerIdCXX_.3  _home_enzar_delivery_EPITA_42sh_CMakeFiles_3.17.1_CompilerIdC_.3  _home_enzar_delivery_EPITA_42sh_src_.3  _home_enzar_delivery_EPITA_42sh_src_ast_.3  _home_enzar_delivery_EPITA_42sh_src_exec_.3  _home_enzar_delivery_EPITA_42sh_src_expansion_.3  _home_enzar_delivery_EPITA_42sh_src_expansion_arithmetic_.3  _home_enzar_delivery_EPITA_42sh_src_expansion_arithmetic_ast_.3  _home_enzar_delivery_EPITA_42sh_src_expansion_arithmetic_exec_.3  _home_enzar_delivery_EPITA_42sh_src_expansion_arithmetic_lexer_.3  _home_enzar_delivery_EPITA_42sh_src_expansion_arithmetic_parser_.3  _home_enzar_delivery_EPITA_42sh_src_garbage_collector_.3  _home_enzar_delivery_EPITA_42sh_src_history_.3  _home_enzar_delivery_EPITA_42sh_src_lexer_.3  _home_enzar_delivery_EPITA_42sh_src_parser_.3  _home_enzar_delivery_EPITA_42sh_src_print_.3  _home_enzar_delivery_EPITA_42sh_src_storage_.3  _home_enzar_delivery_EPITA_42sh_src_utils_.3  _home_enzar_delivery_EPITA_42sh_tests_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_CMakeFiles_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_CMakeFiles_3.17.0_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_CMakeFiles_3.17.0_CompilerIdCXX_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_CMakeFiles_3.17.0_CompilerIdC_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_ast_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_exec_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_expansion_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_expansion_arithmetic_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_expansion_arithmetic_ast_.3  _home_nora_Documents_ing1_projets_branchmaster_42sh_src_expansion_arithmetic_exec_.3  (+179 more)
src/: load_ressource  main.c  main.h  my_42sh.h
src/ast/: ast.c  ast.h  ast_implement.c  free.c  free.h
src/builtins/: builtins.c  builtins.h
src/eval/: ast_print.c  ast_print.h  token_printer.c
src/exec/: ast_exec.c  commands.c  commands.h  exec.c  exec.h  exec_cmd.c  exec_for.c  redirection.c  redirection.h
src/expansion/: arithmetic_expansion.c  command_substitution.c  expansion.c  expansion.h  my_popen.c  my_popen.h  tilde_expansion.c  var_expansion.c
src/expansion/arithmetic/: arithmetic_ast.c  (+1 more)
src/garbage_collector/: garbage_collector.c  garbage_collector.h
src/history/: auto_completion.c  handler.c  history.c  history.h
src/lexer/: lex_evaluation.c  lex_evaluation.h  lexer.c  lexer.h  lexer_struct.h  token.c  token.h
src/module/: builtins.c
src/parser/: parser.c  parser.h  parser_math.c  parser_utils.h
src/print/: ast_print.c  ast_print.h  ast_print_dot.c  ast_print_dot.h  ast_print_main.c  token_printer.c
src/storage/: program_data_storage.c  program_data_storage.h  var_storage.c  var_storage.h
src/utils/: attr.h  bracket_counter.c  bracket_counter.h  buffer.c  buffer.h  exec_utils.c  exec_utils.h  index_utils.c  index_utils.h  main_utils.c  my_itoa.c  my_itoa.h  parser_utils.c  parser_utils.h  string.c  string.h  string_utils.c  string_utils.h  xalloc.c  xalloc.h
src/var_storage/: var_storage.c  var_storage.h
tests/: ast_implement.c  test_TDD.c  test_ast.c  tests.yaml  tests_arithmetic_lexer.c  tests_ast.c  tests_bultins.c  tests_history.c  tests_lexer.c  tests_parser.c  tests_storage.c  tests_var_expansion.c
(+20 files in other folders)
